[project]
name = "grid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chronos-forecasting>=2.0.1",
    "fastdtw>=0.3.4",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
